fix: modal: scrollbar, closeBlock

--- a/coffee-house/src/style/_style.scss
+++ b/coffee-house/src/style/_style.scss
@@ -42,7 +42,7 @@ body {
     padding: 19px 0 0 0;
 }
 
-.bodi_hidden {
+.body_hidden {
     overflow: hidden;
 }
 
